--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nprogress": "^0.2.0",
     "store2": "^2.3.2",
     "toastr": "^2.1.2",
+    "vue2-ajax-form": "^1.0.0",
     "vue": "^2.0.0-rc.6",
     "vue-resource": "^1.0.1",
     "vue-router": "^2.0.0-rc.5",
