--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "dependencies": {
     "core-js": "^2.4.0",
     "editor.md": "^1.5.0",
-    "jquery": "^3.1.0",
+    "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "nprogress": "^0.2.0",
     "store2": "^2.3.2",
     "toastr": "^2.1.2",
-    "vue": "^2.0.0-rc.8",
+    "vue": "^2.0.1",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.0-rc.7",
+    "vue-router": "^2.0.0",
     "vue2-ajax-form": "^1.0.0",
-    "vuex": "^2.0.0-rc.6",
+    "vuex": "^2.0.0",
     "vuex-router-sync": "^3.0.0"
   },
   "devDependencies": {
