--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     ""
   ],
   "scripts": {
-    "dev": "cooking watch",
+    "dev": "cooking watch -p",
     "build": "cooking build -p",
     "deploy": "cooking build --no-color"
   },
