--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": ["es2015", "stage-2"],
     "plugins": [
+        "transform-export-extensions",
         ["transform-runtime", {
             "polyfill": true,
             "regenerator": true
